--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-MovieDB/scripts/controllers/MoviesListContoller.js.rej
+# dist
+dist/
+
+# Node modules
+node_modules/
+
+# Bower modules
+bower_components/
+
+# CSS
+style.css
+
+#server.py cosas del servidor
+db/ 
+
+# dist
+dist/
+
